--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,5 @@
 # DB_URL=mongodb://localhost:27017/book_library
 DB_URI='mongodb+srv://book_library:8xWglB4Es70frqlk@cluster0.ubyns6e.mongodb.net/'
+
+JWT_SECRET=hackathon
+JWT_EXPIRES=1d   
